note app skeleton

--- a/assets/style/base/helpers.css
+++ b/assets/style/base/helpers.css
@@ -55,3 +55,13 @@
 .fa.fa-behance::before {
     content: "\f1b4";
 }
+
+/* grid helpers */
+
+.grid {
+    display: grid;
+}
+
+.full{
+    width: 100%;
+}
