--- a/assets/style/apps/note/note-app.css
+++ b/assets/style/apps/note/note-app.css
@@ -1,3 +1,7 @@
+.keep-header{
+    padding: 1em;
+}
+
 .note-list-container{
     background-color: var(--clr1);
 }
@@ -5,4 +9,29 @@
 .note-list{
     max-width: 1340px;
     background-color: var(--clr2);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 400px;
+    padding:1em;
+    gap: 1em;
+    margin: auto;
+}
+
+.note{
+    background-color: var(--clr3);
+    font-size: 2em;
+    position:relative
+}
+
+.note-options{
+    position: absolute;
+    bottom:0;
+    background-color: #e0ebeb91;
+    padding: 0.4em;
+    padding-inline-start: 2em;
+    opacity: 0;
+    transition: 0.2s;
+}
+
+.note-options:hover{
+    opacity: 1;
 }
