--- a/assets/style/base/helpers.css
+++ b/assets/style/base/helpers.css
@@ -16,6 +16,10 @@
     justify-content: space-between;
 }
 
+.flex.justify-around{
+    justify-content: space-around;
+}
+
 .flex.align-center{
     align-items: center;
 }
