--- a/assets/style/apps/note/note-app.css
+++ b/assets/style/apps/note/note-app.css
@@ -40,3 +40,39 @@
 .note-options:hover{
     opacity: 1;
 }
+
+/* MODAL */
+.main-screen{
+    z-index: 1;
+    transition: 0.1s;
+    opacity: 0;
+    position: fixed;
+    inset: 0;
+    background-color:#142d4cb4;
+    pointer-events: none;
+  }
+
+
+.modal{
+    background-color: #e0ebeb;
+    z-index: 2;
+    color: #24527a;
+    border-radius: 1em;
+    padding: 2em;
+    box-shadow: 5px 5px 15px 1px rgba(0,0,0,0.63);
+    transition: 0.2s;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal.on{
+   top:50% 
+}
+.modal.on, .main-screen.on{
+    opacity: 1;
+    pointer-events: all;
+}
