--- a/assets/style/apps/note/note-app.css
+++ b/assets/style/apps/note/note-app.css
@@ -49,12 +49,17 @@
     opacity: 1;
 }
 
-.note-options img{
+.icon{
     cursor: pointer;
-    background-color: #a7bcb941;
+    background-color: #a7bcb957;
     border-radius: 50%;
     padding: 0.2em;
+    transition: 0.2s
 }
+
+.icon:hover{
+    /* background-color: ; */
+    filter: invert(100%) sepia(4%) saturate(137%) hue-rotate(21deg) brightness(114%) contrast(85%);}
 
 /* MODAL */
 .main-screen{
@@ -132,18 +137,18 @@
 
  .input-box input,
  .input-box textarea{
-    background-color: #435552;
-    color: #24527a;
-    border: 0.2em solid #42b883;
+    background-color: #e0ebeb62;
+    color: var(--clr4);
+    border: none;
     padding: 0.8em;
     width: 100%;
-    font-size: 1.5em;
+    font-size: 1.2em;
     border-radius: 0.8em;
     outline: none;
     transition: 0.4s;
 }
  .input-box span {
-    color: #42b883;
+    color: #24527a;
     position: absolute;
     left: 1em;
     padding: 0.75em;
@@ -156,16 +161,20 @@
 .input-box textarea{
     font-family:latin;
 }
- .input-box input:valid ~ span,
+ 
  .input-box input:focus ~ span,
- .input-box textarea:focus ~ span,
- .input-box textarea:valid ~ span{
+ .input-box textarea:focus ~ span{
     background-color: transparent;
-    color: #24527a;
     transform: translateX(1em) translateY(-0.45em);
     font-size: 1.3em;
     padding: 0 0.6em;
     letter-spacing: 0.1em;
+}
+
+.input-box input:valid ~ span,
+.input-box textarea:valid ~ span{
+    opacity:0;
+    user-select: none;
 }
 
  .input-box input:valid,
@@ -178,24 +187,33 @@
  .input-box textarea:focus{
     background-color: #e0ebeb62;
  }
-/* 
- button{
+
+.note-edit button{
     align-self: flex-start;
     border: 0.2em solid #42b883;
     background-color: #435552;
     color: #42b883;
     padding: 0.6em;
-    width: 10em;
-    font-size: 1.5em;
+    width: 8em;
+    font-size: 1.2em;
     font-weight: 700;
     border-radius: 0.8em;
     outline: none;
     transition: 0.4s;
 }
 
- button:hover{
+.note-edit button:hover{
     
     background-color: #e0ebeb;
     color: #24527a;
     border: 0.2em solid #24527a;
-} */
+}
+
+.note-edit .delete-todo{
+    position:absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: max-content;
+    padding: 0;
+}
