--- a/assets/style/apps/mail/email-app.css
+++ b/assets/style/apps/mail/email-app.css
@@ -1,6 +1,7 @@
 .email-preview{
   cursor: pointer;
-  border: 1px black solid;
+  /* border: 1px black solid; */
+  border-bottom: 0.5px rgb(164, 165, 168) solid;
 }
 
 .white{
@@ -48,8 +49,50 @@
 
 .filter-container{
   flex-direction: column;
-  justify-content: center ; 
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
+
+.filter-container h1{
+  font-size: 60px;
+}
+
+.point{
+  color: forestgreen;
+}
+
+.folder-list{
+  display: flex;
+  gap: 20px;
+  
+}
+
+button{
+  font-size: larger;
+  padding: 10px;
+  background-color: gainsboro;
+  border-radius: 10px;
+  border: 0px black;
+  transition: 1s;
+}
+
+button:hover{
+  background-color: rgb(151, 146, 146);
+  font-size: x-large;
+}
+
+.email-details{
+  /* padding: 20px; */
+  margin-left: 20px;
+  background-color: antiquewhite;
+}
+/* 
+.email-preview{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+} */
 
 
 /* @media (max-height:516px){
