--- a/assets/style/apps/note/note-app.css
+++ b/assets/style/apps/note/note-app.css
@@ -1,7 +1,35 @@
 
 .keep-header{
     padding: 1em;
-    gap: 1em;
+}
+
+.keep-upper-header{
+    padding-inline: 1em;
+}
+
+.keep-upper-header h1{
+    margin: 0;
+    font-size: 2em;
+}
+.keep-upper-header button{
+    align-self: flex-start;
+    border: 0.2em solid #e0ebeb;
+    background-color: #24527a;
+    color: #e0ebeb;
+    padding: 0.6em;
+    width: 8em;
+    font-size: 1.2em;
+    font-weight: 700;
+    border-radius: 0.8em;
+    outline: none;
+    transition: 0.4s;
+}
+
+.keep-upper-header button:hover{
+    
+    background-color: #e0ebeb;
+    color: #24527a;
+    border: 0.2em solid #24527a;
 }
 
 .note-list-container{
@@ -10,7 +38,6 @@
 
 .note-list{
     max-width: 1340px;
-    background-color: var(--clr2);
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 400px;
     padding:1em;
@@ -57,9 +84,17 @@
     transition: 0.2s
 }
 
+.icon.toggled{
+    /* filter: invert(100%) sepia(4%) saturate(137%) hue-rotate(21deg) brightness(114%) contrast(85%); */
+    background-color: rgb(251, 189, 0);
+    filter: invert(100%) sepia(4%) saturate(137%) hue-rotate(21deg) brightness(114%) contrast(85%);
+}
+
+
 .icon:hover{
+    background-color: rgb(251, 189, 0);
+}
     /* background-color: ; */
-    filter: invert(100%) sepia(4%) saturate(137%) hue-rotate(21deg) brightness(114%) contrast(85%);}
 
 /* MODAL */
 .main-screen{
@@ -216,4 +251,20 @@
     transform: translateY(-50%);
     width: max-content;
     padding: 0;
+}
+
+/* FILTERS */
+.input-box.filter input[type ="text"]{
+    font-weight: 700;
+    font-size: 1.5em;
+}
+
+.type-filter{
+        /* justify-content: end; */
+        position: absolute;
+        right: 0;
+        transform: translateY(-104%);
+        opacity: 0.7;
+        height: 3.8em;
+        gap: 0.2em;
 }
