--- a/assets/style/apps/note/note-app.css
+++ b/assets/style/apps/note/note-app.css
@@ -9,7 +9,7 @@
 
 .keep-upper-header h1{
     margin: 0;
-    font-size: 2em;
+    font-size: 3em;
 }
 .keep-upper-header button{
     align-self: flex-start;
@@ -41,7 +41,7 @@
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 400px;
     padding:1em;
-    gap: 1em;
+    gap: 1.4em;
     margin: auto;
 }
 
@@ -50,6 +50,20 @@
     font-size: 2em;
     position:relative;
     border-radius:1em;
+    transition: 0.2s;
+    height: max-content;
+    padding-block-end: 2.5em;
+}
+
+.note.pinned{
+    outline: #f8b400 outset 0.3em;
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.7);
+}
+
+.note-content{
+    object-fit: contain;
+    max-width: 100%;
+    /* margin-block-start: calc(auto - 3em); */
 }
 
 .pin{
@@ -58,6 +72,21 @@
     height:2em;
     top:0.2em;
     left:0.2em;
+}
+
+.icon.pinned{
+    filter: invert(91%) sepia(15%) saturate(110%) hue-rotate(139deg) brightness(105%) contrast(84%);
+}
+
+.icon.duplicate{
+    position: absolute;
+    height: 1.8em;
+    top: 0.1em;
+    right: 0.1em;
+    opacity: 0;
+}
+.note:hover > .icon.duplicate{
+    opacity:1;
 }
 
 .note-options{
@@ -85,7 +114,6 @@
 }
 
 .icon.toggled{
-    /* filter: invert(100%) sepia(4%) saturate(137%) hue-rotate(21deg) brightness(114%) contrast(85%); */
     background-color: rgb(251, 189, 0);
     filter: invert(100%) sepia(4%) saturate(137%) hue-rotate(21deg) brightness(114%) contrast(85%);
 }
@@ -94,7 +122,7 @@
 .icon:hover{
     background-color: rgb(251, 189, 0);
 }
-    /* background-color: ; */
+
 
 /* MODAL */
 .main-screen{
@@ -257,12 +285,13 @@
 .input-box.filter input[type ="text"]{
     font-weight: 700;
     font-size: 1.5em;
+    box-shadow: 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
 }
 
 .type-filter{
         /* justify-content: end; */
         position: absolute;
-        right: 0;
+        right: 1em;
         transform: translateY(-104%);
         opacity: 0.7;
         height: 3.8em;
