--- a/assets/style/apps/mail/email-app.css
+++ b/assets/style/apps/mail/email-app.css
@@ -3,7 +3,7 @@ li{
   cursor: pointer;
   border-bottom: 0.5px rgb(164, 165, 168) solid;
   display: grid;
-  grid-template-columns: 20% 40% 20% 20%;
+  grid-template-columns: 15% 40% 15% 15% 15%;
   align-items: center;
   justify-items: flex-start;
 }
@@ -44,6 +44,7 @@ ul{
   li{
    display: flex;
    flex-direction: column;
+   gap: 5px;
   }
 }
 
