--- a/assets/style/apps/mail/email-app.css
+++ b/assets/style/apps/mail/email-app.css
@@ -1,4 +1,4 @@
-li{
+.email-preview{
   padding: 10px;
   cursor: pointer;
   border-bottom: 0.5px rgb(164, 165, 168) solid;
@@ -7,7 +7,7 @@ li{
   align-items: center;
   justify-items: flex-start;
 }
-li:hover{
+.email-preview:hover{
   border-bottom: 3px rgb(164, 165, 168) solid;
 }
 ::-webkit-scrollbar{
@@ -23,8 +23,7 @@ li:hover{
   background: rgb(182, 170, 192);
 }
 
-ul{
-  padding: 20px;
+.preview-list{
   height: 50vh;
   overflow-y:auto;
   border-radius: 10px;
@@ -41,7 +40,7 @@ ul{
 } */
 
 @media (max-width:658px){
-  li{
+  .email-preview{
    display: flex;
    flex-direction: column;
    gap: 5px;
@@ -76,8 +75,6 @@ ul{
   top: 100%;
   transform: translate(-100% , -100%);
   flex-direction: column;
-  
- 
 }
 
 .composed-form>*{
@@ -134,7 +131,7 @@ ul{
   
 }
 
-button{
+.gmail-app button{
   font-size: larger;
   padding: 10px;
   background-color: gainsboro;
@@ -144,7 +141,7 @@ button{
 }
 
 @media (max-width:658px){
-  button{
+  .gmail-app button{
    font-size: small;
    padding: 2px;
   }
@@ -156,7 +153,7 @@ button{
   }
 }
 
-button:hover{
+.gmail-app button:hover{
   background-color: rgb(151, 146, 146);
   /* font-size: x-large; */
 }
