--- a/assets/style/apps/note/note-app.css
+++ b/assets/style/apps/note/note-app.css
@@ -85,11 +85,11 @@
     transform: translateY(1.6em);
 }
 .note:hover > .note-options.actions{
-    transform: translateY(2.4em);
+    transform: translateY(2.3em);
 }
 
 .note:hover > .note-options.actions.pinned{
-    transform: translateY(3.1em);
+    transform: translateY(3em);
 }
 
 .note:hover > .icon.duplicate,
@@ -99,6 +99,27 @@
 .note.pinned{
     outline: #f8b400 outset 0.3em;
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.7);
+}
+
+.note-list-container:has(.note.dragged),
+.note.dragged .note-content{
+    pointer-events: none;
+    user-select: none;
+}
+
+
+.note.dragged{
+    /* position: absolute; */
+    pointer-events: all;
+    /* transform: translate(50%, 50%); */
+    transition: none;
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.7);
+    z-index:10;
+    cursor: move;
+}
+
+.note.dragged *{
+    pointer-events: none;
 }
 
 .note-header{
@@ -173,7 +194,7 @@ img.note-content{
     border-radius: 50%;
     padding: 0.2em;
     transition: 0.2s;
-    height: 1.8em;
+    height: 1.7em;
 
 }
 
@@ -193,8 +214,8 @@ img.note-content{
 
 .icon.duplicate{
     position: absolute;
-    top: 0.1em;
-    right: 0.1em;
+    top: 0;
+    right: 0;
     opacity: 0;
 }
 
